# benchdiff

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchdiff/: cli.py  models.py  reporter.py  runner.py
benchmarks/: bench_strings.py
tests/: test_cli.py  test_models.py  test_reporter.py  test_runner.py
