[build-system]
requires = ["uv_build>=0.6,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "benchdiff"
module-root = ""

[project]
name = "benchdiff"
version = "0.1.0"
description = "CLI benchmarking tool with rich terminal output and markdown export."
readme = "README.md"
authors = [{ name = "Amin Alaee", email = "mohammadamin.alaee@gmail.com" }]
keywords = ["benchmark", "cli", "performance"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
  "py-cpuinfo>=9.0.0",
  "rich",
  "typer",
]

[project.scripts]
benchdiff = "benchdiff.cli:app"

[project.urls]
Documentation = "https://github.com/aminalaee/benchdiff"
Issues = "https://github.com/aminalaee/benchdiff/issues"
Source = "https://github.com/aminalaee/benchdiff"

[project.optional-dependencies]
svg = ["matplotlib"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "uuid-utils",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "cpuinfo"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C4",
    "UP",
]
